# attrs-serde

./: .gitignore  .travis.yml  Makefile  pyproject.toml  setup.py  tox.ini
attrs_serde/: attrs_serde.py
